[tool.poetry]
name = "botdaniai"
version = "0.1.0"
description = "Telegram bot for DaniAi"
authors = ["DaniAi"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
Pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
